fixed layout shift, and changed a few paddings

--- a/components/Nav.module.scss
+++ b/components/Nav.module.scss
@@ -18,7 +18,7 @@
   height: 100%;
 
   @media (max-width: 920px) {
-    padding: 0 1.3rem;
+    padding: 0 1.2rem;
   }
 
   @media (max-width: 425px) {
