--- a/styles/itemStyles.module.scss
+++ b/styles/itemStyles.module.scss
@@ -15,7 +15,7 @@
   flex-direction: column;
   background-color: #fff;
   margin-top: 3.5rem;
-  padding: 1.5rem 1.6rem;
+  padding: 1.5rem 1.5rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
   h1 {
@@ -35,7 +35,7 @@
 .comments {
   background-color: #fff;
   margin-top: 10px;
-  padding: 0 1.6rem 0.5rem;
+  padding: 0 1.5rem 0.5rem;
 
   a {
     text-decoration: underline;
